Major updates of contact us, section dividers, and buttons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 				Vad säger du, ska vi köra igång?
 				<br><br>
 				<a href="http://890622.github.io/signup.html">
-				<button class="button large_button blue_button" style="margin-bottom: 5px">Välj butiksdesign</button>
+				<button class="button large_button blue_button" style="margin-bottom: 5px">
+					Välj butiksdesign</button>
 				</a>
 				<a href="http://890622.github.io/signup.html">
-				<button class="button large_button orange_button">Chatta med oss</button></a>
+				<button class="button large_button orange_button">
+					Kontakta oss</button></a>
 				</div>
 				</div>
 			</div>
@@ -44,118 +46,140 @@
 
 		<!--- Body START -->
 
-			<!--- Icon boxes -->
+		<!--- Icon boxes -->
 
-			<section class="section" style="max-width: 1200px;">
+		<section class="section" style="max-width: 1200px;">
 
-				<div class="icon_box">
-					<img class="icons" src="http://s1.postimg.org/bshtakjgf/design.png"><br>
-					<h4>Designad webstore</h4>
-					<p>Vi sätter upp en färdigdesignad webstore anpassad efter dina produkter</p>	
-				</div>
-				<div class="icon_box">
-					<img class="icons" src="http://s1.postimg.org/3yh7p6bnj/responsive.png"><br>
-					<h4>Mobil och surfplatta</h4>
-					<p>Varje webstore är anpassad för dator, mobil och surfplatta.</p>	
-				</div>
-				<div class="icon_box">
-					<img class="icons" src="http://s1.postimg.org/m543wnczj/payment.png"><br>
-					<h4>Färdig betallösning</h4>
-					<p>Varje webstore levererars med fullt fungerande 'kundvagn' och betallösning.</p>	
-				</div>
-				<div class="icon_box">
-					<img class="icons" src="http://s1.postimg.org/4dshi6xkv/online6.png"><br>
-					<h4>Gratis web hosting</h4>
-					<p>Du behöver inte oroa dig för hosting. Vi löser det åt dig utan extra kostnad.</p>	
-				</div>
-				<div class="icon_box">
-					<img class="icons" src="http://s1.postimg.org/h7qjbjb0f/like3.png"><br>
-					<h4>Hjälp att komma igång</h4>
-					<p>Vi hjälper dig att få upp shopen, dina produkter och betallösningen.</p>	
-				</div>
-				<div class="icon_box">
-					<img id="icon_geo" src="http://s2.postimg.org/n20sctmdl/seo10.png"><br>
-					<h4>Teknisk support</h4>
-					<p>Skulle du köra fast eller vilja ändra något kan du alltid ta hjälp av våra tekniker.</p>	
-				</div>
+			<div class="icon_box">
+				<img class="icons" src="http://s1.postimg.org/bshtakjgf/design.png"><br>
+				<h4>Designad webstore</h4>
+				<p>Vi sätter upp en färdigdesignad webstore anpassad efter dina produkter</p>	
+			</div>
+			<div class="icon_box">
+				<img class="icons" src="http://s1.postimg.org/3yh7p6bnj/responsive.png"><br>
+				<h4>Mobil och surfplatta</h4>
+				<p>Varje webstore är anpassad för dator, mobil och surfplatta.</p>	
+			</div>
+			<div class="icon_box">
+				<img class="icons" src="http://s1.postimg.org/m543wnczj/payment.png"><br>
+				<h4>Färdig betallösning</h4>
+				<p>Varje webstore levererars med fullt fungerande 'kundvagn' och betallösning.</p>	
+			</div>
+			<div class="icon_box">
+				<img class="icons" src="http://s1.postimg.org/4dshi6xkv/online6.png"><br>
+				<h4>Gratis web hosting</h4>
+				<p>Du behöver inte oroa dig för hosting. Vi löser det åt dig utan extra kostnad.</p>	
+			</div>
+			<div class="icon_box">
+				<img class="icons" src="http://s1.postimg.org/h7qjbjb0f/like3.png"><br>
+				<h4>Hjälp att komma igång</h4>
+				<p>Vi hjälper dig att få upp shopen, dina produkter och betallösningen.</p>	
+			</div>
+			<div class="icon_box">
+				<img id="icon_geo" src="http://s2.postimg.org/n20sctmdl/seo10.png"><br>
+				<h4>Teknisk support</h4>
+				<p>Skulle du köra fast eller vilja ändra något kan du alltid ta hjälp av våra tekniker.</p>	
+			</div>
 
-			</section>
+		</section>
 
-			<section class="section_divider"
-					 id="not_sure_contact_us">
-				<div class="black_opacity2">
-					<div class="section_divider_textbox">
-						<h2>
-							Våra experter sitter redo att hjälpa dig igång.<br>
-							Välj en design så fixar vi resten.<br>
-						</h2>
-						<a href="http://890622.github.io/signup.html">
-						<button class="button large_button blue_button">Välj butisdesign</button></a>
-						<a href="http://890622.github.io/signup.html">
-						<button class="button large_button orange_button">Chatta med oss</button></a>
+		<section class="section_divider"
+				 id="not_sure_contact_us">
+			<div class="black_opacity2">
+				<div class="section_divider_textbox">
+					<h2>
+						Osäker hur man sätter upp en webstore?<br>
+						Välj vårt <i>Kom igång paket</i> så hjälper vi dig!<br>
+					</h2>
+					<a href="http://890622.github.io/signup.html">
+					<button class="button xlarge_button green_button">Kom igång paket</button></a>
+				</div>
+			</div>
+			
+		</section>
+		<section class="section_full_width" id="boxes">
+		<h1 style="color: #595959; margin-bottom: 60px">Vi hjälper dig om du behöver hjälp</h1>
+			<div id="box_website" class="box">
+				<div id="black_opacity_filter" class="opacity_filter">
+					<div class="box_header"><h2>Egen webstore</h2></div>
+					<div class="box_textbox">
+						<ul style="text-align: left">
+							<li>Anpassad för mobil</li>
+							<li>Integrerad betallösning</li>
+							<li>Social media integration</li>
+							<li>Fri hosting</li>
+						</ul>
 					</div>
 				</div>
-				
-			</section>
-			<section class="section_full_width" id="boxes">
-			<h1 style="color: #595959; margin-bottom: 60px">Vi hjälper dig om du behöver hjälp</h1>
-				<div id="box_website" class="box">
-					<div id="black_opacity_filter" class="opacity_filter">
-						<div class="box_header"><h2>Egen webstore</h2></div>
-						<div class="box_textbox">
-							<ul style="text-align: left">
-								<li>Anpassad för mobil</li>
-								<li>Integrerad betallösning</li>
-								<li>Social media integration</li>
-								<li>Fri hosting</li>
-							</ul>
-						</div>
+			</div>
+			<div id="box_facebook" class="box">
+				<div id="blue_opacity_filter" class="opacity_filter">
+					<div class="box_header"><h2>Hjälp att komma igång</h2></div>
+					<div class="box_textbox">
+						<ul style="text-align: left">
+							<li>Uppladdning av produkter</li>
+							<li>Uppladdning av logotyp</li>
+							<li>Aktivering av betallösning</li>
+							<li>Kontaktlänk för mail</li>
+						</ul>
 					</div>
 				</div>
-				<div id="box_facebook" class="box">
-					<div id="blue_opacity_filter" class="opacity_filter">
-						<div class="box_header"><h2>Hjälp att komma igång</h2></div>
-						<div class="box_textbox">
-							<ul style="text-align: left">
-								<li>Uppladdning av produkter</li>
-								<li>Uppladdning av logotyp</li>
-								<li>Aktivering av betallösning</li>
-								<li>Kontaktlänk för mail</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div id="box_facebook_ad" class="box">
-					<div id="white_opacity_filter" class="opacity_filter">
-						<div class="box_header"><h2>Hjälp med ändringar</h2></div>
-						<div class="box_textbox">
-							<ul style="text-align: left">
-								<li>Ändra färger</li>
-								<li>Ändra typsnitt</li>
-								<li>Ändra/ta bort text</li>
-								<li>Ändra/ta bort bilder</li>
+			</div>
+			<div id="box_facebook_ad" class="box">
+				<div id="white_opacity_filter" class="opacity_filter">
+					<div class="box_header"><h2>Hjälp med ändringar</h2></div>
+					<div class="box_textbox">
+						<ul style="text-align: left">
+							<li>Ändra färger</li>
+							<li>Ändra typsnitt</li>
+							<li>Ändra/ta bort text</li>
+							<li>Ändra/ta bort bilder</li>
 
-							</ul>
-						</div>
+						</ul>
 					</div>
 				</div>
-			</section>
-			<section class="section_divider"
-					 id="pricing_divider">
-				<div class="black_opacity2">
-					<div class="section_divider_textbox">
-						<h2>
-							Osäker om det här verkligen är rätt för dig?<br>
-							Kontakt oss via chat eller telefon.<br>
-						</h2>
-						<a href="http://890622.github.io/signup.html">
-				<button class="button large_button orange_button">Chatta med oss</button></a>
-				<a href="http://890622.github.io/signup.html">
-						<button class="button large_button green_button">Ring till oss</button></a>
-					</div>
+			</div>
+		</section>
+		<section class="section_divider"
+				 id="pricing_divider">
+			<div class="black_opacity2">
+				<div class="section_divider_textbox">
+					<h2>
+						<br>
+						Kontakta oss via chat eller telefon.<br>
+					</h2>
+					<a href="http://890622.github.io/signup.html">
+			<button class="button xlarge_button orange_button">Chatta med oss</button></a>
 				</div>
-				
-			</section>
+			</div>
+			
+		</section>
+
+		<!--- Contact me -->
+		
+		<section class="section_full_width">
+			<h1 id="contact_me_h1">Vill du komma i kontakt med oss?</h1>
+			<div class="contact_us_box">
+				<h3>Chatta med oss</h3>
+				<div class="contact_us_textbox">
+					Det enklaste sättet att få ett snabbt svar på din fråga är att starta en chat med oss. Vi svarar oftast inom en minut!
+				</div>
+				<a href="http://890622.github.io/typeform.html"><button class="button medium_button orange_button" id="signup_button" style="width: 250px;">Starta chat</button></a>
+			</div>
+			<div class="contact_us_box">
+				<h3>Maila oss</h3>
+				<div class="contact_us_textbox">
+					Du kan även maila din fråga till oss. Vi svarar alltid samma dag och oftast inom mindre än en timme!
+				</div>
+				<a href="http://890622.github.io/typeform.html"><button class="button medium_button grey_button" id="signup_button" style="width: 250px">Skicka mail</button></a>
+			</div>
+			<div class="contact_us_box">
+				<h3>Ring oss</h3>
+				<div class="contact_us_textbox">
+					Vill du prata direkt med oss kan du när som helst ringa. Skulle det vara så att vi inte svarar så ringer vi upp!
+				</div>
+				<h1 style="margin-top: -5px;">073-622 69 70</h1>
+			</div>
 
 		<!--- Tawk.to -->
 
