Adjusting text and buttons in section dividers

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 				<p>Vi hjälper dig att få upp shopen, dina produkter och betallösningen.</p>	
 			</div>
 			<div class="icon_box">
-				<img id="icon_geo" src="http://s2.postimg.org/n20sctmdl/seo10.png"><br>
-				<h4>Teknisk support</h4>
-				<p>Skulle du köra fast eller vilja ändra något kan du alltid ta hjälp av våra tekniker.</p>	
+				<img id="icon_geo" src="http://s18.postimg.org/k3rvj8e49/web6.png"><br>
+				<h4>Ändringar av design</h4>
+				<p>Skulle du vilja ändra något kan du beställa support av våra webutvecklare.</p>	
 			</div>
 
 		</section>
@@ -145,11 +145,11 @@
 			<div class="black_opacity2">
 				<div class="section_divider_textbox">
 					<h2>
-						<br>
-						Kontakta oss via chat eller telefon.<br>
+						Vill du ändra något i designen?<br>
+						Beställ support av våra webutvecklare!<br>
 					</h2>
 					<a href="http://890622.github.io/signup.html">
-			<button class="button xlarge_button orange_button">Chatta med oss</button></a>
+			<button class="button xlarge_button orange_button">Support</button></a>
 				</div>
 			</div>
 			
