All kinds of changes to copy, boxes and content

--- a/signup.html
+++ b/signup.html
@@ -35,8 +35,8 @@
 		 		<h3>
 			 		Ingen engångsavgift! <br>
 				</h3>
-					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$0<br>
-					Månadsavgift: &emsp;$10</div>
+					<div id="price_info_box">Månadsavgift: &emsp;  $10<br>Engångsavgift: &emsp;$0
+					</div>
 		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=28ESHKD8HA5DE"><button class="button large_button blue_button" id="buy_button">Endast webstore</button></a><br>
 		 		
 		 	</div>
@@ -55,8 +55,8 @@
 		 		<h3>
 			 		Vi hjälper dig att komma igång! <br>
 				</h3>
-					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$29<br>
-					Månadsavgift: &emsp;$10</div>
+					<div id="price_info_box">Månadsavgift: &emsp;  $10<br>Engångsavgift: &emsp;$29
+					</div>
 		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZG59AAL6PSPZ8"><button class="button large_button green_button" id="buy_button">Kom igång paket</button></a><br>
 		 		
 		 	</div>
@@ -82,7 +82,7 @@
 		 		<h3>
 			 		Vill du ändra något?<br>
 				</h3>
-					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$10</div>
+					<div id="price_info_box"><br>Engångsavgift: &emsp;$10</div>
 		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=L3LYKDVQG2V9Q">
 		 			<button class="button large_button orange_button" id="buy_premium_button">
 		 				Support (20 min)
@@ -100,18 +100,9 @@
 			</table>
 			</div>
 			</section>
-
-		<!--- Contact me -->
-		
-		<section class="section_full_width">
-			<h1 id="contact_me_h1">Vill du att vi kontaktar dig?</h1>
-			<div class="contact_us_box"></div>
-			<div class="contact_us_box"></div>
-			<div class="contact_us_box"></div>
+			
 
 			</div>
-
-			<a href="http://890622.github.io/typeform.html"><button class="button large_button grey_button" id="signup_button">Kontakta mig</button></a>
 
 		<!--- Tawk.to -->
 
