Changed copy in header

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class="header" id="landing_page_header">
 			<div class="header_textbox">
 				<div id="header_textbox_text"> 
-					Webstore klar att använda.
-					Bara $10 i månaden.
+					Webstore för $10 i månaden.
+					Redo att använda direkt.
 				</div>
 				<div id="header_textbox_subtext">
 				Det har aldrig någonsin varit enklare att sätta upp en webstore! Välj en design så hjälper vi dig att komma igång.
