--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="header" id="landing_page_header">
 			<div class="header_textbox">
 				<div id="header_textbox_text"> 
-					Webstore för $10 i månaden.
+					Webstore för 499 SEK i månaden.
 					Redo att använda direkt.
 				</div>
 				<div id="header_textbox_subtext">
