Changed to right currency

--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
 		 		<h3>
 			 		Ingen engångsavgift! <br>
 				</h3>
-					<div id="price_info_box">Månadsavgift: &emsp;  499 SEK<br>Engångsavgift: &emsp;$0
+					<div id="price_info_box">Månadsavgift: &emsp;  499 SEK<br>Engångsavgift: &emsp;0 SEK
 					</div>
 		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=28ESHKD8HA5DE"><button class="button large_button blue_button" id="buy_button">Endast webstore</button></a><br>
 		 		
@@ -82,7 +82,7 @@
 		 		<h3>
 			 		Vill du ändra något?<br>
 				</h3>
-					<div id="price_info_box"><br>Engångsavgift: &emsp;$10</div>
+					<div id="price_info_box"><br>Engångsavgift: &emsp;99 SEK</div>
 		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=L3LYKDVQG2V9Q">
 		 			<button class="button large_button orange_button" id="buy_premium_button">
 		 				Support (20 min)
