--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<br><br>
 				<a href="http://890622.github.io/signup.html">
 				<button class="button large_button blue_button" style="margin-bottom: 5px">
-					Välj butiksdesign</button>
+					Välj paket</button>
 				</a>
 				<a href="http://890622.github.io/signup.html">
 				<button class="button large_button orange_button">
