--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 
+		<!--- FONTS -->
+		<link href='//fonts.googleapis.com/css?family=Playfair+Display:400,900|Lato:300' rel='stylesheet' type='text/css'>
+        <meta charset="utf-8">
+
 	</head>
 	
 	<body>
