Changed copy in header image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="header" id="landing_page_header">
 			<div class="header_textbox">
 				<div id="header_textbox_text"> 
-					Webstore för 499 SEK i månaden.
+					Webstore utan engångsavgift.
 					Redo att använda direkt.
 				</div>
 				<div id="header_textbox_subtext">
