--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
 				<tr class="light_row"><td class="icon_cell"><img class="icons_small" src="icons/png/database13.png"></td><td class="text_cell">Hosting</td></tr>
 				<tr><td class="icon_cell"><img class="icons_small" src="icons/png/domain1.png"></td><td class="text_cell">Tictail domän</td></tr>
 				<tr class="light_row"><td class="icon_cell"><img class="icons_small" src="icons/png/email6.png"></td><td class="text_cell">Kontaktlänk (email)</td></tr>
-				<tr><td class="icon_cell"><img class="icons_small" src="icons/png/reply3.png"></td><td class="text_cell">Auto genererat order email</td></tr>
+				<tr><td class="icon_cell"><img class="icons_small" src="icons/png/reply3.png"></td><td class="text_cell">Automatiskt order email</td></tr>
 				<tr class="light_row"><td class="icon_cell"><img class="icons_small" src="icons/png/add42.png"></td><td class="text_cell">Inlogg till produkter</td></tr>
 				<tr><td class="icon_cell"><img class="icons_small" src="icons/png/like3.png"></td><td class="text_cell">Facebook koppling</td></tr>
 				<tr class="light_row"><td class="icon_cell"><img class="icons_small" src="icons/png/web6.png"></td><td class="text_cell">Instagram koppling</td></tr>
