--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
 
 		<!--- Body START -->
 
+		<section class="section_full_width" id="imac">
+			<section class="imac_section">
+				<div class="imac_section_textbox">
+<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+				</div>
+				<div class="imac_section_imagebox">
+					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
+				</div>
+			</section><br>
+			<section class="imac_section">
+				<div class="imac_section_imagebox">
+				<img src="http://s3.postimg.org/yymyymwsz/imac_Rainy_down_first.png"></div>
+				<div class="imac_section_textbox">
+<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+				</div>
+			</section><br>
+			<section class="imac_section" id="imac_section_bottom">
+				<div class="imac_section_textbox">
+<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+				</div>
+				<div class="imac_section_imagebox">
+				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png">
+			</div>
+			</section>
+
 		<!--- Icon boxes -->
 
 		<section class="section" style="max-width: 1200px;">
