--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		<section class="section_full_width" id="imac">
 			<section class="imac_section">
 				<div class="imac_section_textbox">
-<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+					<h2>Stilren design</h2> 
+					<p>Din webshop är enkel i sin utformning och stilren i designen. Kunden kan enkelt spana in produkten och därefter lägga sin beställning.</p>
 				</div>
 				<div class="imac_section_imagebox">
 					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
@@ -62,12 +63,14 @@
 				<div class="imac_section_imagebox">
 				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"></div>
 				<div class="imac_section_textbox">
-<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+					<h2>Färdig kortbetalning</h2>
+					<p>Dina kunder kan ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder. Pengarna sätts därefter in på ditt PayPal konto så du smidigt kommer åt dom..</p>
 				</div>
 			</section><br>
 			<section class="imac_section" id="imac_section_bottom">
 				<div class="imac_section_textbox">
-<h2>Lorem ipsum dolor sit</h2> <p>Amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis.</p>
+					<h2>Enkelt att administrera</h2>
+					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad m.m i dashboarden. AnyWebstores tema är byggt på Tictails plattform för allt göra ditt jobb så enkelt som möjligt.</p>
 				</div>
 				<div class="imac_section_imagebox">
 				<img src="http://s27.postimg.org/v0wigghn7/imac_Tictail.png">
