Changing copy in imac headers

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<section class="section_full_width" id="imac">
 			<section class="imac_section">
 				<div class="imac_section_textbox">
-					<h2>Stilren design</h2> 
+					<h2>Snygg och stilren design</h2> 
 					<p>Din webshop är enkel i sin utformning och stilren i designen. Kunden kan enkelt spana in produkten och därefter lägga sin beställning.</p>
 				</div>
 				<div class="imac_section_imagebox">
