--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"></div>
 				<div class="imac_section_textbox">
 					<h2>Färdig kortbetalning</h2>
-					<p>Dina kunder kan ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder. Pengarna sätts därefter in på ditt PayPal konto så du smidigt kommer åt dom..</p>
+					<p>Dina kunder kan ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder. Pengarna sätts därefter in på ditt PayPal konto så du smidigt kommer åt dom.</p>
 				</div>
 			</section><br>
 			<section class="imac_section" id="imac_section_bottom">
