Font weight etc

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<section class="imac_section" id="imac_section_bottom">
 				<div class="imac_section_textbox">
 					<h2>Enkelt att administrera</h2>
-					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad m.m i dashboarden. AnyWebstores tema är byggt på Tictails plattform för allt göra ditt jobb så enkelt som möjligt.</p>
+					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad m.m. i dashboarden. AnyWebstores tema är byggt på Tictails plattform för allt göra ditt jobb så enkelt som möjligt.</p>
 				</div>
 				<div class="imac_section_imagebox">
 				<img src="http://s27.postimg.org/v0wigghn7/imac_Tictail.png">
