Changed copy in divider section

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 				<div class="section_divider_textbox">
 					<h2>
 						Osäker hur man sätter upp en webstore?<br>
-						Välj vårt <i>Kom igång paket</i> så hjälper vi dig!<br>
+						Oavsett vilket paket du väljer så hjälper vi dig!<br>
 					</h2>
 					<a href="http://890622.github.io/signup.html">
-					<button class="button xlarge_button green_button">Kom igång paket</button></a>
+					<button class="button xlarge_button blue_button">Välj paket</button></a>
 				</div>
 			</div>
 			
