Added id to icon_section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 		<!--- Icon boxes -->
 
-		<section class="section" style="max-width: 1200px;">
+		<section class="section" id="icon_section" style="max-width: 1200px;">
 
 			<div class="icon_box">
 				<img class="icons" src="http://s1.postimg.org/bshtakjgf/design.png"><br>
