Changes to header and iMac sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				Vad säger du, ska vi köra igång?
 				<br><br>
 				<a href="http://890622.github.io/signup.html">
-				<button class="button large_button blue_button" style="margin-bottom: 5px">
+				<button class="button large_button blue_button">
 					Välj paket</button>
 				</a>
 				<a href="http://890622.github.io/signup.html">
@@ -53,24 +53,37 @@
 			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Snygg och stilren design</h2> 
-					<p>Din webshop är enkel i sin utformning och stilren i designen. Kunden kan enkelt spana in produkten och därefter lägga sin beställning.</p>
+					<p>Våra  teman är enkla och stilrena i designen. <i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
+					<br><br>
+					Välj den mall som passar dig bäst.</p>
+					<a href="http://rainy.tictail.com/">
+						<button class="button medium_button" id="rainy_button">Rainy</button></a>
+					<a href="http://jeansy.tictail.com/">
+						<button class="button medium_button" id="jeansy_button">Jeansy</button></a>
 				</div>
 				<div class="imac_section_imagebox">
 					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
+					<img id="phone" src="http://s29.postimg.org/sm72dgvsn/iphone6_rainy_small.png">
 				</div>
 			</section><br>
 			<section class="imac_section">
 				<div class="imac_section_imagebox">
-				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"></div>
-				<div class="imac_section_textbox">
+				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"><img id="phone" src="http://s14.postimg.org/586y0o4wh/iphone6_rainy_down_small.png"></div>
+				<div class="imac_section_textbox" id="imac_section_textbox_right">
 					<h2>Färdig kortbetalning</h2>
-					<p>Dina kunder kan ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder. Pengarna sätts därefter in på ditt PayPal konto så du smidigt kommer åt dom.</p>
+					<p>Dina kunder kan lätt och smidigt ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder.
+					<br><br>
+					Du väljer själv om du vill ha pengarna på antingen ditt PayPal eller Stripe konto.</p>
+					<img src="http://s3.postimg.org/5vug14nn7/paypal_logo_484_B6_FE744_seeklogo_com.png">
+					<img src="http://s4.postimg.org/zduyo9ys9/black.png">
 				</div>
 			</section><br>
 			<section class="imac_section" id="imac_section_bottom">
 				<div class="imac_section_textbox">
 					<h2>Enkelt att administrera</h2>
-					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad m.m. i dashboarden. AnyWebstores tema är byggt på Tictails plattform för allt göra ditt jobb så enkelt som möjligt.</p>
+					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad i dashboarden. <br><br>Vi använder oss av Tictails användarvänliga plattform för att underlätta ditt arbete.</p>
+					<img style="margin-left: 5px" src="http://s22.postimg.org/gw70ckbkh/tictail_logo_181x50.png">
+
 				</div>
 				<div class="imac_section_imagebox">
 				<img src="http://s27.postimg.org/v0wigghn7/imac_Tictail.png">
