Removed boxes, moved icons

--- a/index.html
+++ b/index.html
@@ -90,7 +90,24 @@
 			</div>
 			</section>
 
-		<!--- Icon boxes -->
+		
+
+		<section class="section_divider"
+				 id="not_sure_contact_us">
+			<div class="black_opacity2">
+				<div class="section_divider_textbox">
+					<h2>
+						Osäker hur man sätter upp en webstore?<br>
+						Oavsett vilket paket du väljer så hjälper vi dig!<br>
+					</h2>
+					<a href="http://890622.github.io/signup.html">
+					<button class="button xlarge_button blue_button">Välj paket</button></a>
+				</div>
+			</div>
+			
+		</section>
+		<section class="section_full_width" id="boxes">
+			<!--- Icon boxes -->
 
 		<section class="section" id="icon_section" style="max-width: 1200px;">
 
@@ -126,23 +143,7 @@
 			</div>
 
 		</section>
-
-		<section class="section_divider"
-				 id="not_sure_contact_us">
-			<div class="black_opacity2">
-				<div class="section_divider_textbox">
-					<h2>
-						Osäker hur man sätter upp en webstore?<br>
-						Oavsett vilket paket du väljer så hjälper vi dig!<br>
-					</h2>
-					<a href="http://890622.github.io/signup.html">
-					<button class="button xlarge_button blue_button">Välj paket</button></a>
-				</div>
-			</div>
-			
-		</section>
-		<section class="section_full_width" id="boxes">
-		<h1 style="color: #595959; margin-bottom: 60px">Vi hjälper dig om du behöver hjälp</h1>
+		<!-- <h1 style="color: #595959; margin-bottom: 60px">Vi hjälper dig om du behöver hjälp</h1>
 			<div id="box_website" class="box">
 				<div id="black_opacity_filter" class="opacity_filter">
 					<div class="box_header"><h2>Egen webstore</h2></div>
@@ -182,7 +183,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</section>
 		<section class="section_divider"
 				 id="pricing_divider">
