Added go to order link

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 					<p>Våra  teman är enkla och stilrena i designen. <i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
 					<br><br>
 					Välj den mall som passar dig bäst.</p>
-					<a href="http://rainy.tictail.com/">
+					<a href="http://rainy.tictail.com/" target="_blank">
 						<button class="button medium_button" id="rainy_button">Rainy</button></a>
-					<a href="http://jeansy.tictail.com/">
-						<button class="button medium_button" id="jeansy_button">Jeansy</button></a>
+					<a href="http://jeansy.tictail.com/" target="_blank">
+						<button class="button medium_button" id="jeansy_button">Jeansy</button></a><br><br>
+					<a id="go_to_order_link" href="http://890622.github.io/signup.html">Gå vidare till beställning</a>
 				</div>
 				<div class="imac_section_imagebox">
 					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
