all kinds of things

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<img src="http://s4.postimg.org/zduyo9ys9/black.png">
 				</div>
 			</section><br>
-			<section class="imac_section" id="imac_section_bottom">
+			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Enkelt att administrera</h2>
 					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad i dashboarden. <br><br>Vi använder oss av Tictails användarvänliga plattform för att underlätta ditt arbete.</p>
