Adjusted size, padding and margin of imac boxes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 		<!--- Body START -->
 
+		<!--- iMac section -->
+
 		<section class="section_full_width" id="imac">
 			<section class="imac_section">
 				<div class="imac_section_textbox">
@@ -66,10 +68,13 @@
 					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
 					<img id="phone" src="http://s29.postimg.org/sm72dgvsn/iphone6_rainy_small.png">
 				</div>
-			</section><br>
-			<section class="imac_section">
+			</section>
+
+			<section class="imac_section" id="imac_section_right">
 				<div class="imac_section_imagebox">
-				<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"><img id="phone" src="http://s14.postimg.org/586y0o4wh/iphone6_rainy_down_small.png"></div>
+					<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png">
+					<img id="phone" src="http://s14.postimg.org/586y0o4wh/iphone6_rainy_down_small.png">
+				</div>
 				<div class="imac_section_textbox" id="imac_section_textbox_right">
 					<h2>Färdig kortbetalning</h2>
 					<p>Dina kunder kan lätt och smidigt ange sitt kreditkortsnummer och genomföra sitt köp på några sekunder.
@@ -78,7 +83,8 @@
 					<img src="http://s3.postimg.org/5vug14nn7/paypal_logo_484_B6_FE744_seeklogo_com.png">
 					<img src="http://s4.postimg.org/zduyo9ys9/black.png">
 				</div>
-			</section><br>
+			</section>
+			
 			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Enkelt att administrera</h2>
@@ -87,9 +93,10 @@
 
 				</div>
 				<div class="imac_section_imagebox">
-				<img src="http://s27.postimg.org/v0wigghn7/imac_Tictail.png">
-			</div>
+					<img src="http://s27.postimg.org/v0wigghn7/imac_Tictail.png">
+				</div>
 			</section>
+		</section>
 
 		
 
