--- a/index.html
+++ b/index.html
@@ -59,20 +59,21 @@
 					<br><br>
 					Välj den mall som passar dig bäst.</p>
 					<a href="http://rainy.tictail.com/" target="_blank">
-						<button class="button medium_button" id="rainy_button">Rainy</button></a>
+						<button class="button large_button" id="rainy_button">Rainy demo</button></a>
 					<a href="http://jeansy.tictail.com/" target="_blank">
-						<button class="button medium_button" id="jeansy_button">Jeansy</button></a><br><br>
-					<a id="go_to_order_link" href="http://890622.github.io/signup.html">Gå vidare till beställning</a>
+						<button class="button large_button" id="jeansy_button">Jeansy demo</button></a><br><br>
+						<a id="go_to_order_link" href="http://890622.github.io/signup.html">
+						Klicka här för att gå vidare till priser</a>
 				</div>
 				<div class="imac_section_imagebox">
-					<img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png">
+					<a href="http://rainy.tictail.com/" target="_blank"><img src="http://s2.postimg.org/6xynpqbq1/imac_Rainy.png"></a>
 					<img id="phone" src="http://s29.postimg.org/sm72dgvsn/iphone6_rainy_small.png">
 				</div>
 			</section>
 
 			<section class="imac_section" id="imac_section_right">
 				<div class="imac_section_imagebox">
-					<img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png">
+					<a href="http://rainy.tictail.com/product/rainy_jacket" target="_blank"><img src="http://s1.postimg.org/xp57e7rcf/imac_Rainy_down.png"></a>
 					<img id="phone" src="http://s14.postimg.org/586y0o4wh/iphone6_rainy_down_small.png">
 				</div>
 				<div class="imac_section_textbox" id="imac_section_textbox_right">
