Added button to Admin and adjusted link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<h2>Snygg och stilren design</h2> 
 					<p>Våra  teman är enkla och stilrena i designen. <i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
 					<br><br>
-					Välj den mall som passar dig bäst.</p>
+					Klicka på knapparna för att se demo.</p>
 					<a href="http://rainy.tictail.com/" target="_blank">
 						<button class="button large_button" id="rainy_button">Rainy demo</button></a>
 					<a href="http://jeansy.tictail.com/" target="_blank">
@@ -89,7 +89,15 @@
 			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Enkelt att administrera</h2>
-					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad i dashboarden. <br><br>Vi använder oss av Tictails användarvänliga plattform för att underlätta ditt arbete.</p>
+					<p>Du lägger enkelt upp nya produkter, ändrar priser, storlekar, fraktkostnad i dashboarden.
+					<br><br>
+					Vi använder oss av Tictails användarvänliga plattform för att underlätta ditt arbete.
+					<br><br>
+					Mer info hittar du på Beställningssidan.
+					</p>
+					<a href="http://890622.github.io/signup.html">
+				<button class="button large_button green_button">
+					Gå till Beställningssidan</button>
 
 				</div>
 				<div class="imac_section_imagebox">
