--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Snygg och stilren design</h2> 
-					<p>Våra  teman är enkla och stilrena i designen. <i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
+					<p>Våra  teman är enkla och stilrena i designen.<br>
+					<i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
 					<br><br>
 					Klicka på knapparna för att se demo.</p>
 					<a href="http://rainy.tictail.com/" target="_blank">
