Moved some text around

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 			<section class="imac_section">
 				<div class="imac_section_textbox">
 					<h2>Snygg och stilren design</h2> 
-					<p>Våra  teman är enkla och stilrena i designen.<br>
-					<i><b>Rainy</b></i> passar om du säljer endast en produkt.<br> <i><b>Jeansy</b></i> passar bättre för flera produkter.
-					<br><br>
+					<p>Våra  teman har enkel och stilren design.<br>
+					<i><b>Rainy</b></i>  passar bättre för endast en produkt.<br><i><b>Jeansy</b></i> passar om du säljer flera produkter.<br>
+					 <br>
 					Klicka på knapparna för att se demo.</p>
 					<a href="http://rainy.tictail.com/" target="_blank">
 						<button class="button large_button" id="rainy_button">Rainy demo</button></a>
