--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 		<!--- Contact me -->
 		
-		<section class="section_full_width">
+		<section class="section_full_width" id="contact_me">
 			<h1 id="contact_me_h1">Vill du komma i kontakt med oss?</h1>
 			<div class="contact_us_box">
 				<h3>Chatta med oss</h3>
