--- a/index.html
+++ b/index.html
@@ -128,17 +128,19 @@
 					<img src="http://s1.postimg.org/h6s0gtzsv/screencapture_rainy_tictail_com_1451493667043.png">
 				</a>
 				<div class="template_textbox">
-					<h3>Rainy store</h3>
-					<p>Design optimzed for one-product websites.<br>
-						Eget tincidunt nibh pulvinar a curabitur aliquet.
-					</p>
-					<p>Montly price: $10.00</p>
-					<!-- <a href="http://890622.github.io/signup.html">
-				<button class="button medium_button transparent_button">
-					Preview</button></a> -->
-					<a href="http://890622.github.io/signup.html">
-				<button class="button medium_button grey_button">
-					Buy Now</button></a>
+					<div class="template_textbox_description">
+						<h3>Rainy store</h3>
+						<p>Design optimzed for one-product websites.<br>
+							Eget tincidunt nibh pulvinar a curabitur aliquet.</p>
+					</div>
+					<div class="template_textbox_price">
+						<a href="www.google.com">
+						<button class="button medium_button grey_button xlarge_button" id="buy_button">
+							Buy Now
+						</button></a>
+					</div>
+						
+
 				</div>
 			</div>
 		</section>
@@ -150,16 +152,18 @@
 				</a>
 			
 				<div class="template_textbox">
-					<h3>Jeansy store</h3>
-					<p>Design optimzed for multiple-product websites.<br>
-						Eget tincidunt nibh  aliquet quam id dui.
-					</p>
-					<!-- <a href="http://890622.github.io/signup.html">
-				<button class="button medium_button transparent_button">
-					Preview</button></a> -->
-					<a href="http://890622.github.io/signup.html">
-				<button class="button medium_button grey_button" id="buy_button">
-					Buy Now</button></a>
+					<div class="template_textbox_description">
+						<h3>Jeansy store</h3>
+						<p>Design optimzed for multiple-product websites.<br>
+							Eget tincidunt nibh  aliquet quam id dui.</p>
+					</div>
+					<div class="template_textbox_price">
+						<a href="www.google.com">
+						<button class="button medium_button grey_button xlarge_button" id="buy_button">
+							Buy Now
+						</button></a>
+					</div>
+					
 				</div>
 			</div>
 		</section>
