--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					Looking to create a website?<br>
 					We already did it for you.<br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
-					<button class="button medium_button transparent_button">Find out more</button>
+					<button class="button medium_button transparent_button" id="header_button">Find out more</button>
 				</div>
 			</div>
 			</div>
@@ -61,7 +61,7 @@
 
 		<section class="section_full_width" id="new_imac_section">
 
-				<div class="new_imac_section_textbox" id="new_imac_section_textbox_desktop">
+				<div class="new_imac_section_textbox laptop_textbox" id="new_imac_section_textbox_desktop">
 					<h3>Integrated payment solution</h3>
 					<p>Quisque velit nisi, pretium ut lacinia in, eleme ntum id enim. Curabitur aliquet quam id dui posuere blandit. Vivamus suscipit tortor eget.</p>
 					<!--- Buttonbox -->
@@ -91,7 +91,7 @@
 					<img src="http://s15.postimg.org/4sjg4ub17/macbookair_tictail.png">
 				</div>
 				
-				<div class="new_imac_section_textbox">
+				<div class="new_imac_section_textbox laptop_textbox">
 					<h3>Simple admin dashboard</h3>
 					<p>Quisque velit nisi, pretium ut lacinia in, eleme ntum id enim. Curabitur aliquet quam id dui posuere blandit. Vivamus suscipit tortor eget.</p>
 					<!--- Buttonbox -->
