--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 		<section class="section_full_width template_section">
 			<div class="template_box">
-				<a href="http://rainy.tictail.com/"><div class="opacity_filter" id="rainy_opacity"></div>
+				<a href="http://rainy.tictail.com/" target="_blank"><div class="opacity_filter" id="rainy_opacity"></div>
 					<img src="http://s1.postimg.org/h6s0gtzsv/screencapture_rainy_tictail_com_1451493667043.png">
 				</a>
 				<div class="template_textbox">
@@ -121,7 +121,7 @@
 						<button class="button medium_button xlarge_button grey_button" id="buy_button">
 							Buy Now
 						</button></a>
-						<a href="www.google.com">
+						<a href="http://rainy.tictail.com" target="_blank">
 						<button class="button medium_button xlarge_button bluegrey_button" id="demo_button">
 							Live Demo
 						</button></a>
@@ -135,7 +135,7 @@
 
 		<section class="section_full_width template_section">
 			<div class="template_box">
-				<a href="http://jeansy.tictail.com/"><div class="opacity_filter" id="jeansy_opacity"></div>
+				<a href="http://jeansy.tictail.com/" target="_blank"><div class="opacity_filter" id="jeansy_opacity"></div>
 					<img src="http://s18.postimg.org/fke9bi1yx/screencapture_jeansy_tictail_com_1451493215962.png">
 				</a>
 			
@@ -150,7 +150,7 @@
 						<button class="button medium_button xlarge_button grey_button" id="buy_button">
 							Buy Now
 						</button></a>
-						<a href="www.google.com">
+						<a href="http://jeansy.tictail.com" target="_blank">
 						<button class="button medium_button xlarge_button bluegrey_button" id="demo_button">
 							Live Demo
 						</button></a>
