--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					Looking to create a website?<br>
 					We already did it for you.<br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
-					<button class="button medium_button transparent_button" id="header_button">Find out more</button>
+					<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
 				</div>
 			</div>
 			</div>
