Header text weight

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="dark_opacity" id="header_dark_opactiy">
 				<div id="header_big_text"> 
 					Looking to create a website?<br>
-					We already did it for you.<br>
+					<span>We already did it for you.</span><br>
 					<p>Your awesome looking website is ready to use. For only $10/month.</p><br>
 					<button class="button medium_button transparent_button" id="header_button"><img src="http://s1.postimg.org/9vactrn23/arrow_204_16.png"> Find out more</button>
 				</div>
