--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!--- FONTS -->
 
-		<link href='//fonts.googleapis.com/css?family=Playfair+Display:400,900|Lato:300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	</head>
 	
