--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!--- FONTS -->
 
-		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	</head>
 	
