--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 				</div>
 				
 				<div class="new_imac_section_textbox">
-					<h3>Professional design</h3>
-					<p>Quisque velit nisi, pretium ut lacinia in, eleme ntum id enim. Curabitur aliquet quam id dui posuere blandit. Vivamus suscipit tortor eget.</p>
+					<h3>Airbrushed simplistic design</h3>
+					<p> Simple straightforward design that focuses on products instead of visual noice. The large header image makes a powerful visual impression on the visitor. <br><br>
+					The shallow two-page-structure drives visitors towards purchase.</p>
 						<!--- Buttonbox -->
 						<div class="new_imac_section_textbox_buttonbox">
 							<a href="http://890622.github.io/signup.html"><button class="button large_button grey_button">Select your design</button>
@@ -61,9 +62,9 @@
 
 		<section class="section_full_width" id="new_imac_section">
 
-				<div class="new_imac_section_textbox laptop_textbox" id="new_imac_section_textbox_desktop">
+				<div class="new_imac_section_textbox" id="new_imac_section_textbox_desktop">
 					<h3>Integrated payment solution</h3>
-					<p>Quisque velit nisi, pretium ut lacinia in, eleme ntum id enim. Curabitur aliquet quam id dui posuere blandit. Vivamus suscipit tortor eget.</p>
+					<p>All websites are equipped with an integrated and activated PayPal payment solution. Howeverr admins can easilly switch over to, or add, Stripe and Klarna as well from the admin dashboard.</p>
 					<!--- Buttonbox -->
 						<div class="new_imac_section_textbox_buttonbox">
 							<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/AM_SbyPP_mc_vs_ms_ae_UK.png">
@@ -91,9 +92,12 @@
 					<img src="http://s15.postimg.org/4sjg4ub17/macbookair_tictail.png">
 				</div>
 				
-				<div class="new_imac_section_textbox laptop_textbox">
-					<h3>Simple admin dashboard</h3>
-					<p>Quisque velit nisi, pretium ut lacinia in, eleme ntum id enim. Curabitur aliquet quam id dui posuere blandit. Vivamus suscipit tortor eget.</p>
+				<div class="new_imac_section_textbox" id="macbook_air_textbox">
+					<h3>Easy-to-use admin dashboard</h3>
+					<p>All websites are built on Tictaisl platform which gives admins access to Tictails super simple admin dashboard.<br><br>
+					Inside the admin dashboard admins can easilly change any information related to products, store name, URL, terms, shipping and much more.</p>
+
+
 					<!--- Buttonbox -->
 				</div>
 
